--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="lib" path="libs/GifView.jar"/>
+	<classpathentry kind="lib" path="libs/locSDK_4.2.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
