--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,25 +6,64 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
-    
+
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    
+
     <!-- 打开Camera的权限 -->
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.autofocus" />
     <!-- 开启闪光灯权限 -->
     <uses-permission android:name="android.permission.FLASHLIGHT" />
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
-    
+    <!-- 这个权限用于进行网络定位 -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" >
+    </uses-permission>
+    <!-- 这个权限用于访问GPS定位 -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" >
+    </uses-permission>
+    <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位 -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" >
+    </uses-permission>
+    <!-- 获取运营商信息，用于支持提供运营商信息相关的接口 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" >
+    </uses-permission>
+    <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位 -->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" >
+    </uses-permission>
+    <!-- 用于读取手机当前的状态 -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" >
+    </uses-permission>
+    <!-- 写入扩展存储，向扩展卡写入数据，用于写入离线定位数据 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" >
+    </uses-permission>
+    <!-- 访问网络，网络定位需要上网 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+	<!--SD卡读取权限，用户写入离线定位数据-->
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" >
+    </uses-permission>
+    <!-- 允许应用读取低级别的系统日志文件 -->
+    <uses-permission android:name="android.permission.READ_LOGS" >
+    </uses-permission>
 
     <application
         android:icon="@drawable/icon"
-        android:label="@string/app_name"
-         >
-         <uses-library android:name="android.test.runner"/>
-         
+        android:label="@string/app_name" >
+        <uses-library android:name="android.test.runner" />
+
+        <service
+            android:name="com.baidu.location.f"
+            android:enabled="true"
+            android:process=":remote" >
+        </service>
+
+        <!-- meta-data需要写在application中 -->
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="P1em4rS76nK8L9kYrU16gp3o" />
+
         <activity
             android:name="cn.nsx.yaoyiyao.Appstart"
             android:label="@string/title_activity_main"
@@ -35,30 +74,64 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="cn.nsx.yaoyiyao.WhatsnewDoor" android:theme="@style/Anim_style2" />
-        <activity android:name="cn.nsx.yaoyiyao.MainYaoyiyao" android:theme="@style/Anim_style2" />
-        <activity android:name="cn.nsx.yaoyiyao.Login"  android:theme="@android:style/Theme.NoTitleBar" /> 
-        <activity android:name="cn.nsx.yaoyiyao.Regist"  android:theme="@android:style/Theme.NoTitleBar" />       
-        <activity android:name="cn.nsx.yaoyiyao.Welcome"  android:theme="@style/Anim_style2"  />
-        <activity android:name="cn.nsx.yaoyiyao.Whatsnew"  android:theme="@style/Anim_style2" />
-        <activity android:name="cn.nsx.yaoyiyao.ChatActivity"  android:theme="@android:style/Theme.NoTitleBar" />
-        <activity android:name="cn.nsx.yaoyiyao.ShakeActivity"  android:theme="@android:style/Theme.NoTitleBar" />
-        <activity android:name="cn.nsx.yaoyiyao.InfoXiaohei"  android:theme="@android:style/Theme.NoTitleBar" />
-        <activity android:name="cn.nsx.yaoyiyao.Exit" android:theme="@style/MyDialogStyle" />        
-        <activity android:name="cn.nsx.yaoyiyao.ExitFromSettings" android:theme="@style/MyDialogStyleBottom" /> 
-        <activity android:name="cn.nsx.yaoyiyao.InfoXiaoheiHead" android:theme="@style/HeadScale" />
-        <activity android:name="cn.nsx.yaoyiyao.LoadingActivity" android:theme="@style/MyDialogStyle" />             
-        <activity android:name="cn.nsx.yaoyiyao.MainTopRightDialog" android:theme="@style/MyDialogStyleTop" /> 
-        <activity android:name=".ShakeLight" android:theme="@style/MyDialogStyle" /> 
-        <activity android:name=".ShakeFloat" android:theme="@style/MyDialogStyle" /> 
-        
+        <activity
+            android:name="cn.nsx.yaoyiyao.WhatsnewDoor"
+            android:theme="@style/Anim_style2" />
+        <activity
+            android:name="cn.nsx.yaoyiyao.MainYaoyiyao"
+            android:theme="@style/Anim_style2" />
+        <activity
+            android:name="cn.nsx.yaoyiyao.Login"
+            android:theme="@android:style/Theme.NoTitleBar" />
+        <activity
+            android:name="cn.nsx.yaoyiyao.Regist"
+            android:theme="@android:style/Theme.NoTitleBar" />
+        <activity
+            android:name="cn.nsx.yaoyiyao.Welcome"
+            android:theme="@style/Anim_style2" />
+        <activity
+            android:name="cn.nsx.yaoyiyao.Whatsnew"
+            android:theme="@style/Anim_style2" />
+        <activity
+            android:name="cn.nsx.yaoyiyao.ChatActivity"
+            android:theme="@android:style/Theme.NoTitleBar" />
+        <activity
+            android:name="cn.nsx.yaoyiyao.ShakeActivity"
+            android:theme="@android:style/Theme.NoTitleBar" />
+        <activity
+            android:name="cn.nsx.yaoyiyao.InfoXiaohei"
+            android:theme="@android:style/Theme.NoTitleBar" />
+        <activity
+            android:name="cn.nsx.yaoyiyao.Exit"
+            android:theme="@style/MyDialogStyle" />
+        <activity
+            android:name="cn.nsx.yaoyiyao.ExitFromSettings"
+            android:theme="@style/MyDialogStyleBottom" />
+        <activity
+            android:name="cn.nsx.yaoyiyao.InfoXiaoheiHead"
+            android:theme="@style/HeadScale" />
+        <activity
+            android:name="cn.nsx.yaoyiyao.LoadingActivity"
+            android:theme="@style/MyDialogStyle" />
+        <activity
+            android:name="cn.nsx.yaoyiyao.MainTopRightDialog"
+            android:theme="@style/MyDialogStyleTop" />
+        <activity
+            android:name=".ShakeLight"
+            android:theme="@style/MyDialogStyle" />
+        <activity
+            android:name=".ShakeFloat"
+            android:theme="@style/MyDialogStyle" />
+        <activity android:name=".SpinnerActivity" />
+        <activity
+            android:name="cn.nsx.yaoyiyao.MyLocation"
+            android:theme="@style/MyDialogStyleTop" />
     </application>
-    
-    <instrumentation 
-        android:targetPackage="cn.nsx.yaoyiyao" 
-        android:label="this is a test" 
+
+    <instrumentation
         android:name="android.test.InstrumentationTestRunner"
-        >       
+        android:label="this is a test"
+        android:targetPackage="cn.nsx.yaoyiyao" >
     </instrumentation>
 
 </manifest>
